
Unit Tracking
* Removed: All related code to unit tracking has been removed and replaced by LibSUnit.
* Change: All previous Unit Detail lookups and comparisons have been replaced by Events with Unit Objects.
* Note: This may take some time to iron out any glitches in the system (major overhaul).

Endless Eclipse
* Progenitor Saetos
** New: UTID updated.
* Juntun
** New: UTID udpated.
* Ebassi
** New: UTID updated.
* Arebus
** New: UTID udpated.
* Rhu'Megar
** New: UTID updated.

Frozen Tempest
*  Artifex Zaviel
** New: Enrage timer added for 7 minutes.
* Kolmasveli and Toinenveli
** New: Enrage timer added for 7 minutes.
** New: Tank-Swap enabled for both Ire debuffs.

Triumph of the Dragon Queen
* Grand Falconer Zoles
** Fixed: Should now return the correct Unit Object during new add spawns.

Experts
Empyrean Core
* Baird Bringhurst
** New: Enrage timer added for 13.5 minutes.

Tower of the Shattered
* Psychophage Primakov
** New: Enrage timer added for 8 mintues (Estimate)

----
v1.3.8

* Percentage Monitor
** Fixed: UnitID Percent refence object error. (2962)

Storm Legion

Endless Eclipse
* New: Regulos Template
* Progenitor Saetos
** New: Added 4 additional units for ID capture and encounter launching.
** Fixed: Corrected name.

Frozen Tempest
* Menu
** Change: Re-ordered Menu items to better portray progress.
* Gangnum
** New: Added Mechanic Spy for Tempest Wrath.
** New: Added personal Alert for Tempest Wrath debuff.
** New: Added personal Alert for Move away from the Tempest after debuff drops.
** New: Added Alert for Blinding Surge.
* Artifex Zaviel
** New: Added personal Alert for Arc Weld mechanic.
** New: Added Mechanic Spy for Arc Weld.
** New: Added Alert for Energy Conduit cast warning.
** New: Added Alert for debuff duration of Energy Conduit.
** New: Added Tank-Swap monitor for both Dissonant Vitality and Energy Conduit.
** New: Added Phase Tracking.
** New: Added warning Alert and duration Alert for Ensnaring Jolt.
** Fixed: Corrected name.
